--- a/frontend/src/components/navbar.scss
+++ b/frontend/src/components/navbar.scss
@@ -1,7 +1,7 @@
 .navbar {
   height: 8rem;
   width: 100%;
-  background-color: red;
+  background-color: darkred;
   display: flex;
   justify-content: center;
 
