Finished html/styling for guest and room options selector

--- a/frontend/src/components/header.scss
+++ b/frontend/src/components/header.scss
@@ -30,6 +30,7 @@
         &.active {
           border: 0.2rem solid white;
           border-radius: 0.5rem;
+          background-color: rgb(194, 0, 0);
         }
       }
     }
@@ -85,12 +86,39 @@
           cursor: pointer;
         }
 
-
-
         .calendar {
           position: absolute;
           top: 6rem;
           left: 20%;
+        }
+
+        .options {
+          position: absolute;
+          top: 6rem;
+          border: 0.1rem solid lightpink;
+          padding: 1rem;
+
+          .option-item {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            gap: 3rem;
+            margin: 1rem 0.5rem;
+
+            .option-button {
+              background-color: white;
+              border: 0.1rem solid darkred;
+              cursor: pointer;
+              padding: 1rem 1.5rem;
+              margin: 0 0.5rem;
+            }
+
+            .option-select {
+              display: flex;
+              align-items: center;
+              gap: 0.5rem;
+            }
+          }
         }
       }
 
