Guest and room option selector logic complete

--- a/frontend/src/components/header.scss
+++ b/frontend/src/components/header.scss
@@ -49,7 +49,7 @@
       width: 12rem;
       height: 5rem;
       cursor: pointer;
-      border: none;
+      border: 0.2rem solid white;
       background-color: red;
       color: darkred;
       font-weight: 500;
