Use display variable with header component to control how much of header is displayed on each route

--- a/frontend/src/components/header.scss
+++ b/frontend/src/components/header.scss
@@ -1,13 +1,17 @@
-.header {
-  height: 40rem;
+.header {  
   width: 100%;
   background-color: darkred;
   display: flex;
   justify-content: center;
 
+  .container.partial {
+    height: 20rem;
+  }
+
   .container {
     height: 100%;
     width: 100%;
+    height: 40rem;
     max-width: 120rem;
     display: flex;
     flex-direction: column;
