Styling featured property section on main page

--- a/frontend/src/components/header.scss
+++ b/frontend/src/components/header.scss
@@ -5,7 +5,7 @@
   justify-content: center;
 
   .container.partial {
-    height: 20rem;
+    height: 15rem;
   }
 
   .container {
@@ -101,6 +101,7 @@
           top: 6rem;
           border: 0.1rem solid lightpink;
           padding: 1rem;
+          background-color: white;
 
           .option-item {
             display: flex;
