--- a/frontend/src/webpages/home.scss
+++ b/frontend/src/webpages/home.scss
@@ -3,5 +3,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: flex-start;
   gap: 5rem;
+
+  .title {
+    width: 100%;
+    max-width: 120rem;
+    font-size: 2.5rem;
+    margin-bottom: -3rem;
+  }
 }
