--- a/frontend/src/components/header.scss
+++ b/frontend/src/components/header.scss
@@ -94,6 +94,7 @@
           position: absolute;
           top: 6rem;
           left: 20%;
+          z-index: 5;
         }
 
         .options {
@@ -102,6 +103,7 @@
           border: 0.1rem solid lightpink;
           padding: 1rem;
           background-color: white;
+          z-index: 5;
 
           .option-item {
             display: flex;
