Styling email subscribe section

--- a/frontend/src/components/header.scss
+++ b/frontend/src/components/header.scss
@@ -54,8 +54,8 @@
       height: 5rem;
       cursor: pointer;
       border: 0.2rem solid white;
-      background-color: red;
-      color: darkred;
+      background-color: rgb(194, 0, 0);
+      color: white;
       font-weight: 500;
       font-size: 2rem;
     }
@@ -132,8 +132,8 @@
       .search-button {
         cursor: pointer;
         border: none;
-        background-color: red;
-        color: darkred;
+        background-color: rgb(194, 0, 0);
+        color: white;
         font-weight: 500;
         font-size: 2rem;
         height: 80%;
