--- a/frontend/src/webpages/hotelList.scss
+++ b/frontend/src/webpages/hotelList.scss
@@ -1,8 +1,11 @@
 .hotel-list {
   width: 100%;
   margin-top: 10rem;
+  display: flex;
+  justify-content: center;
 
   .list-container {
+    width: 100%;
     max-width: 120rem;
     display: flex;
     justify-content: center;
@@ -14,7 +17,7 @@
       padding: 0.5rem;
 
       .search-title {
-
+        margin-bottom: 2rem;
       }
 
       .search-group {
