--- a/frontend/src/webpages/hotelList.scss
+++ b/frontend/src/webpages/hotelList.scss
@@ -3,6 +3,7 @@
   margin-top: 10rem;
   display: flex;
   justify-content: center;
+  color: black;
 
   .list-container {
     width: 100%;
@@ -12,18 +13,50 @@
 
     .list-search {
       flex: 1;
-      background-color: red;
+      background-color:  rgb(249, 173, 160);
       width: 100%;
-      padding: 0.5rem;
+      padding: 1.5rem;
+      border-radius: 0.5rem;
 
       .search-title {
-        margin-bottom: 2rem;
+        margin-bottom: 1rem;
+        font-size: 2.5rem;
       }
 
       .search-group {
         display: flex;
         flex-direction: column;
         gap: 1rem;
+        position: relative;
+
+        .search-item {
+          font-size: 1.25rem;
+        }
+
+        > input {
+          border: none;
+          outline: none;
+          height: 4rem;
+          padding: 0.5rem;
+          font-size: 2rem;
+        }
+
+        > span {
+          height: 4rem;
+          background-color: white;
+          padding: 0.5rem;
+          display: flex;
+          align-items: center;
+          font-size: 2rem;
+          cursor: pointer;
+          position: relative;
+        }
+
+        .calendar {
+          position: absolute;
+          top: 4rem;
+          left: -0.5rem;
+        }
       }
     }
 
