--- a/frontend/src/webpages/hotelList.scss
+++ b/frontend/src/webpages/hotelList.scss
@@ -26,7 +26,7 @@
       .search-group {
         display: flex;
         flex-direction: column;
-        gap: 1rem;
+        gap: 2rem;
         position: relative;
 
         .search-item {
@@ -56,6 +56,26 @@
           position: absolute;
           top: 4rem;
           left: -0.5rem;
+        }
+
+        .num-group {
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+        }
+
+        .num-group > span {
+          font-size: 1.5rem;
+          font-weight: bold;
+        }
+
+        .num-group > input {
+          border: none;
+          height: 4rem;
+          width: 10rem;
+          padding: 0.5rem;
+          font-size: 2rem;
+          text-align: center;
         }
       }
     }
