--- a/frontend/src/webpages/hotelList.scss
+++ b/frontend/src/webpages/hotelList.scss
@@ -1,6 +1,6 @@
 .hotel-list {
   width: 100%;
-  margin-top: 10rem;
+  margin-top: 2rem;
   display: flex;
   justify-content: center;
   color: black;
@@ -93,6 +93,7 @@
 
     .list-results {
       flex: 3;
+      margin-left: 2rem;
     }
   }
 }
