--- a/frontend/src/components/searchResult.scss
+++ b/frontend/src/components/searchResult.scss
@@ -85,6 +85,13 @@
       .sr-button {
         padding: 0.5rem;
         width: 100%;
+        height: 3.5rem;
+        font-size: 1.5rem;
+        color: white;
+        font-weight: bold;
+        background-color: darkred;
+        border: none;
+        border-radius: 1rem;
       }
     }
   }
