--- a/frontend/src/components/footer.scss
+++ b/frontend/src/components/footer.scss
@@ -1,6 +1,8 @@
 .footer {
   width: 100%;
   max-width: 120rem;
+  margin-left: auto;
+  margin-right: auto;
 
   .footer-container {
     display: flex;
