--- a/frontend/src/webpages/hotel.scss
+++ b/frontend/src/webpages/hotel.scss
@@ -1,3 +1,46 @@
+.image-modal {
+  height: 100vh;
+  width: 100vw;
+  z-index: 10;
+  position: absolute;
+  background-color: rgba(169, 169, 169, 0.671);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  .modal-close  {
+    position: absolute;
+    top: 8rem;
+    right: 35rem;
+    font-size: 4rem;
+    cursor: pointer;
+    color: white;
+    background-color:  rgb(194, 0, 0);
+    padding: 1rem 1.75rem;
+    border-radius: 100rem;
+  }
+
+  >img {
+    height: 50%;
+    width: 50%;
+    object-fit: cover;
+    margin-top: -20rem;
+    border: 0.1rem solid darkred;
+  }
+
+  > .modal-slider {
+    font-size: 4rem;
+    margin: -20rem 3rem 0rem 3rem;
+    cursor: pointer;
+    color: white;
+    background-color: darkred;
+    padding: 1rem 1.2rem;
+    border-radius: 100rem;
+
+  }
+}
+
+
 .hotel-main {
   width: 100%;
   max-width: 120rem;
@@ -46,17 +89,27 @@
   }
 
   .hotel-gallery {
-
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    width: 100%;
+    height: 100%;
 
-    > * {
-      height: 35rem;
-      width: 35rem;
-      margin: 0.25rem 0;
-      object-fit: cover;
+    .hg-wrapper {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+
+      > * {
+        width: 33%;
+        height: 50%;
+        object-fit: cover;
+        margin-bottom: 0.5rem;
+        cursor: pointer;
+      }
     }
+
+
+
+    
   }
 
   .hotel-details {
@@ -69,6 +122,7 @@
       h1 {
         font-size: 3rem;
         margin-bottom: 2rem;
+        color: darkred;
       }
       p {
         font-size: 1.5rem;
@@ -86,6 +140,7 @@
 
       .hs-length {
         font-size: 2.25rem;
+        color: darkred;
       }
 
       > .hs-rating {
