--- a/frontend/src/components/footer.scss
+++ b/frontend/src/components/footer.scss
@@ -1,8 +1,7 @@
 .footer {
   width: 100%;
   max-width: 120rem;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 2rem auto 0 auto;
 
   .footer-container {
     display: flex;
