--- a/frontend/src/webpages/hotel.scss
+++ b/frontend/src/webpages/hotel.scss
@@ -3,7 +3,7 @@
   width: 100vw;
   z-index: 10;
   position: absolute;
-  background-color: rgba(169, 169, 169, 0.671);
+  background-color: rgba(169, 169, 169, 0.4);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -21,11 +21,12 @@
   }
 
   >img {
-    height: 50%;
-    width: 50%;
+    height: 65%;
+    width: 60%;
     object-fit: cover;
     margin-top: -20rem;
     border: 0.1rem solid darkred;
+    box-shadow: 0 1rem 1rem 1rem rgba(0,0,0,0.2);
   }
 
   > .modal-slider {
@@ -36,6 +37,7 @@
     background-color: darkred;
     padding: 1rem 1.2rem;
     border-radius: 100rem;
+    
 
   }
 }
